Finalized playerAction screen, init hashmaps, fixed multiline string bug